//
// Copyright (C) 2016-present Instructure, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

/**
 * @flow
 */

import 'react-native'
import React from 'react'
import PublishedIcon from '../components/PublishedIcon'
import renderer from 'react-test-renderer'

test('render published', () => {
  let tree = renderer.create(
    <PublishedIcon published={true} />
  ).toJSON()
  expect(tree).toMatchSnapshot()
})

test('render unpublished', () => {
  let tree = renderer.create(
    <PublishedIcon published={false} />
  ).toJSON()
  expect(tree).toMatchSnapshot()
})

test('render larger icon size', () => {
  let tree = renderer.create(
    <PublishedIcon published={true} iconSize={75} />
  ).toJSON()
  expect(tree).toMatchSnapshot()
})
